--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,28 @@ body {
     
 }
 
+.contact-container {
+    background: #6a5acd;
+    color: #232443;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 48px 0;
+}
+
+.contact-content {
+    color: #232443;
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+}
+
 .footer-container {
     background: #1b1b27;
     display: flex;
